{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "de55eb15-4bbe-47fe-bb70-614ecd38cfe8",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "a06f4a65-26c4-4510-80e1-4b1af047765a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "20a8b50c-3af1-4f05-ba5d-68737d956bed",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FireWeapon",
                    "type": "Button",
                    "id": "62ce5aa4-c0ff-4ec6-80e3-c6283ef4b493",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMovement",
                    "type": "Button",
                    "id": "a222390d-70a5-47f3-8f60-1783a7d1461b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchGun",
                    "type": "Button",
                    "id": "fa00dcc7-61fb-4011-8c70-96d8e6189893",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=5)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8df7ffc9-53bd-497b-b51c-7be8416c8016",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD Keys",
                    "id": "314226e8-293b-4a09-9f35-afb153b595ca",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5359c1e5-be79-4910-949b-864c488c39b2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "43cb999a-29cf-4820-b3fe-c7dca7eb6548",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b8a3b9d6-6b9f-4361-af75-8d2ca9091797",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "566fc33d-0856-406c-b1dc-4d6c33d64dae",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow Keys",
                    "id": "db2c00be-10f3-4aef-a408-0e1fb3e417af",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "ef8df37c-bcc1-4294-9bcb-c9f4b3981bde",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "23d33cdd-4352-4b98-847d-ffe2f4a43bf8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "d6c8d0f4-1282-4514-91e2-6db68aa6f53a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "02f921cc-c3f1-4fdb-ba42-44308ec5559d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "445807ad-47de-4a90-9a6f-b2480d72899e",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41f86975-c884-46c4-a88b-0e7671a539c4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Two Modifiers",
                    "id": "38bf5545-7153-4f01-9f9d-3e01dcf631c7",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f9dc99d-8700-4226-8c90-901077d4a80f",
                    "path": "<Keyboard>/q",
                    "interactions": "Press(pressPoint=1,behavior=2)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "SwitchGun",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}